<resources>

    <!--All-->

    <string name="app_name" translatable="false">FoodEx</string>
    <string name="all">All</string>
    <string name="debtors">Debtors</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Checkout</string>
    <string name="sifra">$ %s</string>
    <string name="plus" translatable="false">+</string>
    <string name="subtract" translatable="false">-</string>

    <!--Bottom Navigation-->

    <string name="customers">Customers</string>
    <string name="products">Products</string>
    <string name="sales">Sales</string>
    <string name="profile">Profile</string>

    <!--Customer-->

    <string name="client_photo">Customer photo.</string>
    <string name="add_client">Add Client</string>
    <string name="add_new_client">Adding Client</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cpf" translatable="false">CPF</string>
    <string name="last_name">Last Name</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="register_client">Register customer</string>
    <string name="changing_client">Changing Client</string>
    <string name="delete_client">Delete Client</string>
    <string name="change_client">Change Client</string>

    <!--Product-->

    <string name="delete_product">Delete Product</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_name">Product\'s name</string>
    <string name="add_new_product">Adding Product</string>
    <string name="add_product_value">Product value</string>
    <string name="register_product">Register Product</string>
    <string name="description">Description</string>
    <string name="produto_sem_descricao">Product without description.</string>
    <string name="changing_product">Changing Product</string>
    <string name="change_product">Change Product</string>

    <!--Sale-->

    <string name="vender_produto">Make a sale</string>
    <string name="add_new_sale">Adding Sale</string>
    <string name="no_client_found">No customer found.</string>
    <string name="select_client">Select customer</string>
    <string name="search_client">Search customer</string>
    <string name="no_product_found">No product found.</string>
    <string name="select_product">Select product</string>
    <string name="search_product">Search product</string>

    <!--Payment-->

    <string name="add_new_pagamento">Add Payment</string>
    <string name="receber_pagamento">Receive money</string>
    <string name="venda_paga">Did the customer pay?</string>
    <string name="nao_ha_cliente_devedor">No customer is owing!</string>

    <!--Error-->

    <string name="error_campo_obrigatorio">Required field</string>
    <string name="error_delete_client">Error deleting client, please try again later.</string>
    <string name="error_delete_product">Error deleting product, please try again later.</string>
    <string name="error_add_product">Error adding product, please try again later.</string>
    <string name="error_add_pay">Error adding payment, please try again later.</string>
    <string name="error_add_client">Error adding client, please try again later.</string>
    <string name="error_add_sale">Error adding sales, please try again later.</string>
    <string name="error_connect">Error, failed to connect to server.</string>

    <!--Profile-->

    <string name="profile_picture">Profile picture.</string>
    <string name="manage_your_sales">Manage Your Sales</string>
    <string name="deseja_apagar">Want to delete: %s</string>
    <string name="valor_em_deficit">The customer is due</string>
    <string name="company_data">Company Data</string>
    <string name="company_name">Name</string>
    <string name="company_phone">Phone</string>
    <string name="company_email">E-mail</string>
    <string name="company_address">Address</string>
    <string name="change_endereco">Change Address</string>
    <string name="change_email">Change E-mail</string>
    <string name="change_name">Change Name</string>
    <string name="change_phone">Change Phone</string>
    <string name="endereco">Address</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="required_field">This field must not start with the space and must be filled in.</string>
    <string name="add_corporation">Add your business data!</string>

    <!-- Client Menu -->

    <string name="send_email">Send an email</string>
    <string name="send_message">Send a message</string>
    <string name="call_client">Make a call</string>
    <string name="message_to_debtor_customer">Hi, I\'m from %s and I\'m reminding you that you didn\'t pay $ %s.</string>
    <string name="quantity_and_product" translatable="false">%d - %s</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="value">Value</string>
    <string name="acquired_by">Acquired by %s</string>
    <string name="paid_at_time_of_purchase">Paid on purchase.</string>
    <string name="sale_made_without_payment">Sale made without payment</string>
    <string name="product_description">Product Description</string>
    <string name="payments">Payments</string>
    <string name="records">Records</string>

</resources>
