<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/keyline_5"
        android:paddingTop="@dimen/keyline_2"
        android:paddingEnd="@dimen/keyline_5"
        android:paddingBottom="@dimen/keyline_5">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottom_sheet_title_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="?alphaEmphasisHigh"
            android:text="@string/add_new_sale"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
            android:id="@+id/bottom_sheet_add_venda_searchspinner_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_5"
            android:layout_marginBottom="@dimen/keyline_5"
            android:elevation="2dp"
            app:BoarderColor="@color/color_primary"
            app:BordersSize="0.5dp"
            app:DividerHeight="@dimen/keyline_5"
            app:NoItemsFoundText="@string/no_client_found"
            app:RevealEmptyText="@string/select_client"
            app:SearchHintText="@string/search_client"
            app:ShowBorders="true"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_add_venda_searchspinner_produto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title_add" />

        <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
            android:id="@+id/bottom_sheet_add_venda_searchspinner_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_5"
            android:layout_marginBottom="@dimen/keyline_5"
            android:elevation="2dp"
            app:BoarderColor="@color/color_primary"
            app:BordersSize="0.5dp"
            app:DividerHeight="@dimen/keyline_5"
            app:NoItemsFoundText="@string/no_product_found"
            app:RevealEmptyText="@string/select_product"
            app:SearchHintText="@string/search_product"
            app:ShowBorders="true"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_add_venda_quantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_add_venda_searchspinner_cliente" />

        <Button
            android:id="@+id/bottom_sheet_add_venda_decrementar_quantidade"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:textSize="32sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_add_venda_quantidade"
            app:layout_constraintEnd_toStartOf="@id/bottom_sheet_add_venda_quantidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottom_sheet_add_venda_quantidade" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottom_sheet_add_venda_quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:textSize="32sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_add_venda_valor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_add_venda_searchspinner_produto" />

        <Button
            android:id="@+id/bottom_sheet_add_venda_incrementar_quantidade"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="32sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_add_venda_quantidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bottom_sheet_add_venda_quantidade"
            app:layout_constraintTop_toTopOf="@id/bottom_sheet_add_venda_quantidade" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bottom_sheet_add_venda_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="@color/color_pago"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_add_venda_switch_estado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_add_venda_quantidade" />

        <Switch
            android:id="@+id/bottom_sheet_add_venda_switch_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:switchPadding="@dimen/keyline_5"
            android:text="@string/venda_paga"
            android:textAppearance="@style/TextAppearance.MyTheme.Button"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_botao_cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_add_venda_valor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sheet_botao_cadastrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:enabled="false"
            android:padding="@dimen/keyline_2"
            android:text="@string/checkout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_add_venda_switch_estado" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
