<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_dialog_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:alpha="?alphaEmphasisHigh"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceHeadline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_dialog_configura_nome_empresa"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:text="@string/change_name"
            android:textAlignment="center"
            app:icon="@drawable/ic_business_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_titulo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_dialog_nome_empresa"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_configura_nome_empresa">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_dialog_configura_telefone_empresa"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:text="@string/change_phone"
            android:textAlignment="center"
            app:icon="@drawable/ic_local_phone_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_nome_empresa" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_dialog_telefone_empresa"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_configura_telefone_empresa">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number|text"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_dialog_configura_email_empresa"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:text="@string/change_email"
            android:textAlignment="center"
            app:icon="@drawable/ic_email_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_telefone_empresa" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_dialog_email_empresa"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_configura_email_empresa">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_dialog_configura_endereco_empresa"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:text="@string/change_endereco"
            android:textAlignment="center"
            app:icon="@drawable/ic_location_on_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_email_empresa" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_dialog_endereco_empresa"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_configura_endereco_empresa">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_dialog_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:text="@string/save"
            android:textAlignment="center"
            app:icon="@drawable/ic_save_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_endereco_empresa" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_dialog_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline_4"
            android:text="@string/logout"
            android:textAlignment="center"
            app:icon="@drawable/ic_exit_to_app_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dialog_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
