<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/keyline_5"
    android:paddingTop="@dimen/keyline_2"
    android:paddingEnd="@dimen/keyline_5"
    android:paddingBottom="@dimen/keyline_5">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_menu_client_button_call"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/keyline_2"
        android:padding="@dimen/keyline_2"
        android:text="@string/call_client"
        app:icon="@drawable/ic_local_phone_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_menu_client_button_message"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/keyline_2"
        android:padding="@dimen/keyline_2"
        android:text="@string/send_message"
        app:icon="@drawable/ic_message_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_menu_client_button_call" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_menu_client_button_email"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/keyline_2"
        android:padding="@dimen/keyline_2"
        android:text="@string/send_email"
        app:icon="@drawable/ic_email_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_menu_client_button_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_menu_client_button_edit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/keyline_2"
        android:padding="@dimen/keyline_2"
        android:text="@string/change_client"
        app:icon="@drawable/ic_mode_edit_black_24dp"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_menu_client_button_email" />

</androidx.constraintlayout.widget.ConstraintLayout>